Fix home overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,6 +62,7 @@ body{
 
 section{
     padding: 5rem 5%;
+    overflow: hidden;
 }
 
 ::-webkit-scrollbar{
@@ -253,7 +254,7 @@ header #menu-btn:hover{
     align-items: center;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    gap: 4rem;
+    column-gap: 4rem;
 }
 
 .home .image{
